# mcp

./: .env.example  .gitattributes  .gitbook.yaml  .gitignore  .pre-commit-config.yaml  .schemathesis.yaml  .sentryclirc  .spectral.yml  ACTUAL_API_STATUS.md  ALIGNMENT_REPORT.md  API_ENDPOINTS_COMPLETE.md  API_LIVE_STATUS.md  API_OVERVIEW.md  API_REFERENCE.md  BLOG_SYNC_SETUP.md  BONDMCP_FINAL_SESSION_SUMMARY.md  CHANGELOG.md  COMPLETE_ENDPOINTS_GUIDE.md  CONTRIBUTING.md  CURRENT_STATUS_AND_MANUAL_FIXES.md  DOCS-CONTRIBUTING.md  Dockerfile  ENDPOINTS.md  GET_STARTED.md  GITBOOK_SYNC_STATUS.md  GLOSSARY.md  HEALIFY_CLAUDE.md  HEALTH_AI_EXAMPLES.md  INTERACTIVE_API_PLAYGROUND.md  LICENSE  LIVE_API_STATUS.md  MCP_DEVELOPMENT_BEST_PRACTICES.md  MCP_DIRECTORY_REGISTRATION.md  MCP_DISTRIBUTION_METHODS.md  MCP_INTEGRATION_POINTS.md  MCP_INTEGRATION_STRATEGY.md  MCP_MARKETING_STRATEGIES.md  MCP_RESEARCH.md  MCP_TEST_RESULTS.md  MCP_USER_ACQUISITION_STRATEGIES.md  (+36 more)
.changeset/: thick-houses-yell.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: 01-ci.yml  02-security.yml  03-deploy-production.yml  05-maintenance.yml  README.md  auto_ready_on_green.yml  blog-sync.yml  ci-cd.yml  ci.yml  contract_ingest.yml  ensure_pr_checklist.yml  gitbook-sync.yml  openapi-diff.yml  openapi-generation.yml  openapi-ingest.yml  openapi-ingestion-old.yml  openapi-ingestion.yml  openapi-s3-to-repo-sync.yml  openapi-validate.yml  release-sdks.yml  sdk-regenerate.yml  sdk-release.yml  seobot-sync-bondmcp.yml  tests.yml  update-api-docs.yml
MIGRATIONS/: 1.0.0-to-1.0.1.md  README.md
api/: blog-sync.ts
api-reference/: API_REFERENCE.md  AUTH_AND_API_KEYS_REFERENCE.md  COMPLETE_API_REFERENCE.md  CONSENSUS_SYSTEM.md  CORS_CONFIGURATION.md  ENABLED_ROUTERS.md  ENDPOINTS_V2.md  HEALTHCARE_INTEGRATION_REFERENCE.md  HEALTH_AI_REFERENCE.md  QUICK_REFERENCE.md  README.md  SYSTEM_ADMIN_MCP_REFERENCE.md  api-keys.md  api-overview.md  ask.md  authentication.md  endpoints.md  health-ai-apis.md  health-data.md  health.md  import.md  index.md  insights.md  openapi-specification-cli-api-only.md  orchestrator.md  supplement.md
blog/: README.md  advanced-health-ai-monitoring-bondmcp.md  ai-clinical-care-transformation.md  ai-clinical-trial-optimization.md  ai-drug-development.md  ai-emergency-department.md  ai-personalized-recovery-plans.md  ai-radiology-workflow.md  ai-sleep-lighting-optimization.md  blockchain-health-records.md  context-aware-health-agents.md  digital-health-equity.md  digital-health-investment.md  digital-therapeutics-market.md  energy-efficient-wearable-encryption.md  explainable-ai-clinical-imaging.md  harvard-ai-drug-discovery.md  health-data-governance.md  healthcare-cloud-security.md  healthcare-data-interoperability.md  healthcare-predictive-analytics.md  iot-medical-device-security.md  medical-device-cybersecurity.md  population-health-ai.md  precision-medicine-genomics.md  remote-patient-monitoring.md  telemedicine-integration-strategies.md  wearable-health-data-security.md  wearable-sensor-innovations.md
bondmcp-cli/: README.md  cli.py  openapi.json
bondmcp-cli/bondmcp_cli/: __init__.py  cli.py
bondmcp_cli/: cli.py
bondmcp_sdk/: __init__.py  bondmcp-node.js  client.py  enhanced_client.py
contributing/: CONTRIBUTING.md  README.md  documentation-style.md
deployment/: PRODUCTION_DEPLOYMENT_GUIDE.md
docs/: ADR-002-automated-openapi-pipeline.md  AUTHENTICATION_METHODS.md  ENVIRONMENT_REQUIREMENTS.md  OPENAPI_STYLE.md  PRODUCT_ENHANCEMENT_OPPORTUNITIES.md  PR_AUTOMATION_IMPLEMENTATION.md  README.md  SDK_PUBLISHING.md  SDK_REORGANIZATION.md  SUMMARY.md  agent_powered_health.md  analysis.md  data.md  health.md  integration-lifecycle.md  openapi-examples.md  openapi-pipeline-testing.md  openapi-pipeline.md  protocol_overview.md  sdk-overview.md  users.md  versioning.md  vision.md  why-bondmcp.md
docs/adr/: ADR-002-contract-ingest-pipeline.md
docs/api/: changelog.md
docs/api-documentation/: api-reference-openapi.md
docs/api-reference/: README.md  authentication.md  error-handling.md  openapi.md  quick-start.md  rate-limiting.md
docs/mcp/: consuming-capabilities.md  overview.md
docs/runbooks/: sdk-release.md
examples/: README.md  best-practices.md  mcp_discovery_demo.py  node_basic.js  python_basic.py  use-cases.md
examples/health-ai/: HEALTH_AI_EXAMPLES.md
getting-started/: README.md  authentication-setup.md  authentication.md  first-api-call.md  introduction.md  pricing-and-plans.md  quick-start.md  quickstart-guide.md  quickstart.md
go/: README.md  go.mod
infrastructure/api-gateway/: README.md  (+1 more)
integration-guides/: billing-setup.md  health-ai-integration.md  mcp-server-setup.md  python-sdk-example.md  webhook-configuration.md
javascript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
mcp-server/: mcp-config.json  server.py
openapi/: bondmcp-api-formatted.json  bondmcp-api.json  bondmcp.v1.yaml  bondmcp.v1.yaml.new  bundled.json  latest.json  latest.normalized.json
python/: README.md  enhanced_client.py
resources/: CHANGELOG.md  faq.md  status.md  troubleshooting.md
scripts/: ONBOARDING-SETUP.sh  build-sdks.js  check_legacy_quarantine.js  create_frontend_bump_pr.mjs  extract-changelog-section.ts  generate_openapi.js  generate_spec_diff.mjs  openapi-utils.js  sdk-generator.js  semver-check.ts  sync-seobot-to-blog.js  test-pipeline.js  update-website-sections.js  update_api_docs.py  update_changelog.mjs  validate_openapi.mjs  validate_platform_dispatch.mjs
sdk/: bondmcp-node.js  bondmcp-python.py  package.json
sdks/: README.md  javascript.md  mcp.md  python.md
sdks/python/: README.md  client.py  pyproject.toml
sdks/python/bondmcp/: __init__.py  models.py
sdks/python/bondmcp_sdk/: __init__.py
spec/: openapi.json  openapi.yaml
styles/: custom.css  website.css
tests/: conftest.py  manual-pipeline-test.js  test-openapi-pipeline.js  test_bondmcp_node.js  test_bondmcp_python.py  test_cli.py  test_client.py  test_contract_scripts.js  validate_mcp_schemas.py
tmp-workflows/: README.md  verify-api-status.yml
(+64 files in other folders)
