[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bondmcp"
version = "0.1.0"
description = "CLI and SDK for interacting with the BondMCP public API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25"
]

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "rich>=13.0"
]

[project.scripts]
bondmcp-cli = "bondmcp_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
