[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bondmcp"
version = "2.1.0"
description = "Python SDK for the BondMCP health AI protocol"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BondMCP Team", email = "support@bondmcp.com"}
]
maintainers = [
    {name = "BondMCP Team", email = "support@bondmcp.com"}
]
keywords = ["bondmcp", "health", "ai", "medical", "healthcare", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.8.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://bondmcp.com"
Documentation = "https://docs.bondmcp.com"
Repository = "https://github.com/bondmcp/mcp"
"Bug Tracker" = "https://github.com/bondmcp/mcp/issues"
Changelog = "https://github.com/bondmcp/mcp/blob/main/python/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["bondmcp*"]

[tool.setuptools.package-data]
bondmcp = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=bondmcp"

